fixed modal z-index- now higher than vertical navbar when open

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -10,7 +10,7 @@
 
 	background: $secondary-bg-color;
 
-	z-index: 10;
+	z-index: 1000;
 	top: 0;
 }
 
